Tried to fix the collapse button on the right

--- a/Minimal.css
+++ b/Minimal.css
@@ -1043,7 +1043,7 @@ body, input, button,
   width:15px;
 }
 .workspace-ribbon-collapse-btn svg path {
-  stroke-width:3px;
+  stroke-width:2px;
 }
 .nav-action-button svg path {
   stroke-width:2px;
